fix: biometric on small screen a

--- a/omn/src/app/biometrics/biometrics.component.scss
+++ b/omn/src/app/biometrics/biometrics.component.scss
@@ -12,3 +12,8 @@
 .button-text{
     color: var(--app-dark-green);
 }
+.biometrics {
+  --overflow: scroll;
+  overflow: scroll;
+  -webkit-overflow-scrolling: touch;
+}
